<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group
        android:id="@+id/group1"
        android:checkableBehavior="single">

    <item
        android:id="@+id/ic_website"
        android:title="@string/website"
        android:icon="@drawable/ic_browser" />

    <item
        android:id="@+id/ic_email"
        android:title="@string/emails"
        android:icon="@drawable/ic_email" />

    <item
        android:id="@+id/ic_list"
        android:title="@string/list"
        android:icon="@drawable/ic_list" />

    <item
        android:id="@+id/ic_domain"
        android:title="@string/domains"
        android:icon="@drawable/ic_domain" />

    <item
        android:id="@+id/ic_content"
        android:title="@string/content"
        android:icon="@drawable/ic_content" />

    </group>

</menu>