<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/ic_home"
        android:title="@string/home"
        android:icon="@drawable/ic_home"
        android:iconTint="@color/app_icon_color_gray"
        android:iconTintMode="src_in"/>

    <item
        android:id="@+id/ic_addpost"
        android:title="@string/add_post"
        android:iconTintMode="screen"
        android:iconTint="@color/app_icon_color_gray"
        android:icon="@drawable/ic_add" />

    <item
        android:id="@+id/ic_education"
        android:title="Education"
        android:iconTintMode="src_over"
        android:iconTint="@color/app_icon_color_gray"
        android:icon="@drawable/ic_education" />
    <item
        android:id="@+id/ic_notification"
        android:title="@string/Notification"
        android:iconTintMode="src_over"
        android:visible="false"
        android:iconTint="@color/app_icon_color_gray"
        android:icon="@drawable/ic_bell" />

    <item
        android:id="@+id/ic_profile"
        android:title="@string/Profile"
        android:iconTintMode="src_atop"
        android:iconTint="@color/app_icon_color_gray"
        android:icon="@drawable/ic_user" />

</menu>