<?xml version="1.0" encoding="utf-8"?>
<layout>

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:timer="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/app_color_gray"
        android:gravity="center"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="28dp"
            android:layout_margin="8dp"
            android:contentDescription="@string/login_img_title_desc"
            android:scaleType="centerInside"
            android:src="@drawable/ic_applogo" />

        <TextView
            android:id="@+id/tvtitlesignin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="25dp"
            android:fontFamily="@font/metropolis_semibold"
            android:gravity="center_horizontal"
            android:text="@string/login_button_text"
            android:textColor="@android:color/black"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/tvtitleemail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="16dp"
            android:fontFamily="@font/metropolis_semibold"
            android:text="@string/login_email_text"
            android:textSize="16sp" />

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/edEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="8dp"
            android:layout_marginRight="16dp"
            android:autofillHints=""
            android:background="@drawable/edittext_roundcorner"
            android:inputType="textEmailAddress"
            android:minHeight="48dp"
            android:padding="8dp"
            android:paddingStart="16dp"
            android:paddingEnd="8dp" />

        <TextView
            android:id="@+id/tvtitlepass"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:fontFamily="@font/metropolis_semibold"
            android:text="@string/login_password_text"
            android:textSize="16sp" />

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/edPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="16dp"
            android:autofillHints=""
            android:background="@drawable/edittext_roundcorner"
            android:inputType="textPassword"
            android:minHeight="48dp"
            android:padding="8dp"
            android:paddingStart="16dp"
            android:paddingEnd="8dp" />

        <TextView
            android:id="@+id/tvForgotPass"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end|center_vertical"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="16dp"
            android:fontFamily="@font/metropolis_semibold"
            android:gravity="end|center_vertical"
            android:text="@string/login_forgotpassword"
            android:textSize="16dp" />


        <TextView
            android:id="@+id/btnLogin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="20dp"
            android:background="@drawable/orange_roundcorner"
            android:backgroundTint="@color/app_color_primary"
            android:fontFamily="@font/metropolis_semibold"
            android:gravity="center"
            android:minWidth="200dp"
            android:padding="8dp"
            android:text="@string/login_button_text"
            android:textColor="@color/app_color_white"
            android:textSize="20dp" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:foregroundGravity="center"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tvtitlesignup"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/metropolis_semibold"
                android:text="@string/login_no_account"
                android:textSize="16dp" />

            <TextView
                android:id="@+id/tvtSignup"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/metropolis_semibold"
                android:paddingStart="4dp"
                android:paddingEnd="8dp"
                android:text="@string/login_signup"
                android:textColor="@color/app_color_primary"
                android:textSize="18dp" />

        </LinearLayout>


        <com.google.android.gms.common.SignInButton
            android:id="@+id/GoogleSignIn"
            android:layout_width="225dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="16dp"
            android:minWidth="225dp"
            android:visibility="visible"
            app:buttonSize="wide"
            app:colorScheme="dark" />

    </LinearLayout>
</layout>
